--- a/templates/instructions.html
+++ b/templates/instructions.html
@@ -51,7 +51,7 @@
             <li>
                 <p>Və son olaraq hər bir istifadəçinin inkişaf yolu izlənir və statistik məlumatlarınıza səhifənin yuxarı hissəsində yer alan
                     adınızın üzərinə, daha ətraflı isə açılan menyuda "Xal: x" düyməsinə klikləyərək baxa bilərsiniz. 
-                    <br/>Xallar <code style="color:black;">həll olunan məsələlər / ümumi məsələ</code> düsturu ilə hesablanır. Və xalınızın 200-dən yüksək olduğu
+                    <br/>Xallar <span style="color:black;">həll olunan məsələlər / ümumi məsələ</span> düsturu ilə hesablanır. Və xalınızın 200-dən yüksək olduğu
                     təqdirdə digər istifadəçilərin də həll etməsi üçün məsələ göndərə bilərsiniz.
                 </p>
             </li>
