--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,9 @@
     <meta name="author" content="Pragmatech">
     <meta name="keywords" content="Pragmatech Developers Hub">
 
+    <!-- FAVICON -->
+    <link rel="icon" href="{% static 'images/logo_icon.png' %}" type="image/png">
+
     <!-- Title Page-->
     <title>Pragmatech Developers</title>
 
