--- a/static/css/main.css
+++ b/static/css/main.css
@@ -847,14 +847,17 @@ header img {
 .instructions-container{
   padding-top: 20px;
   width: 90%;
-  margin: auto;
-  color: white;
   text-align: center;
+  background-color: white;
+  margin: 40px auto 0 auto;
+  border-radius: 4px;
+  box-shadow: 0px 8px 20px 0px rgba(0, 0, 0, 0.15);
 }
 .instructions-content{
-  text-shadow: 0 0 10px black;
   font-size: 1.2em;
   line-height: 50px;
+  width: 80%;
+  margin: auto;
 }
 .instructions-list{
   margin: 20px 0px;
